@@ -356,3 +356,6 @@
 
 /* Define to `int' if <sys/types.h> does not define. */
 #undef pid_t
+
+/* Build Rootless code */
+#undef ROOTLESS
